fix: use prefer-color-scheme for alert dark mode

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -169,16 +169,16 @@
 .markdown-alert.markdown-alert-caution .markdown-alert-title {
   color: var(--color-caution);
 }
-
-.dark {
-  --color-note: #2f81f7;
-  --color-tip: #3fb950;
-  --color-warning: #d29922;
-  --color-severe: #db6d28;
-  --color-caution: #f85149;
-  --color-important: #a371f7;
+@media (prefers-color-scheme: dark) {
+  .root {
+    --color-note: #2f81f7;
+    --color-tip: #3fb950;
+    --color-warning: #d29922;
+    --color-severe: #db6d28;
+    --color-caution: #f85149;
+    --color-important: #a371f7;
+  }
 }
-
 :root {
   --color-note: #0969da;
   --color-tip: #1a7f37;
